<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="MIDDLE_DOT">\u00B7</string>
    <string name="new_message_notification_channel_id">3372</string>
    <string name="new_message_notification_channel_name">새 메시지</string>

    <string name="app_name">Dorandoran</string>

    <string name="loginFailed">Login Failed</string>
    <string name="loginSuccess">Login Success</string>
    <string name="checkingUser">Checking User</string>
    <string name="creatingUser">Creating User</string>
    <string name="loadingChatRooms">Loading Chat Rooms</string>
    <string name="writeMessage">Write a Message</string>
    <string name="cannotFindUser">Cannot Find User</string>
    <string name="chatRoomCreated">Chat Room Created</string>
    <string name="cannotCreateChatRoom">Cannot Create Chat Room</string>
    <string name="newChatRoom">New Chat</string>
    <string name="signOut">signOut</string>
    <string name="unknownUser">Unknown User</string>
    <string name="unknownMessage">Unknown Message</string>
    <string name="avatar">Avatar</string>
    <string name="unknownTime">Unknown Time</string>
    <string name="messageSeen">Seen</string>
    <string name="selectAction">Select an Action.</string>
    <string name="copy">Copy</string>
    <string name="copied">Copied</string>
    <string name="message">Message</string>
    <string name="leaveRoom">Leave Room</string>
    <string name="leavedRoom">You leaved the room.</string>
    <string name="leaveRoomConfirm">Do you really want to leave the room.</string>
    <string name="choose_emoticon">Choose Emoticon</string>
    <string name="send_message">Send Message</string>
    <string name="loadingEmoticons">Loading Emoticons</string>
    <string name="emoticon">Emoticon</string>
    <string name="installNewVersion">Please install latest version from Google Play Store. Application will be closed in 5 seconds.</string>
    <string name="newVersionAvailable">New version available</string>
    <string name="pleaseUpdate">Please, update app to new version in Google Play Store.</string>
    <string name="update">Update</string>
    <string name="noThanks">No, thanks</string>
    <string name="enterOtherUserEmail">Enter another user\'s email.</string>
    <string name="channel_name">New Message</string>
    <string name="channel_description">Notification for new messages</string>
    <string name="NEW_MESSAGE_CHANNEL_ID">NEW_MESSAGE</string>
    <string name="notificationSettings">Notification Settings</string>
    <string name="notificationSettingNotSupported">Sorry, we don\'t support customizing notification under Android O.</string>
</resources>
