<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:paddingVertical="10dp"
    android:paddingStart="15dp"
    android:paddingLeft="15dp"
    android:paddingEnd="60dp"
    android:paddingRight="60dp">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/user_circle"
        android:contentDescription="@string/avatar"
        android:scaleType="centerInside" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/avatar"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_toEndOf="@+id/avatar"
        android:layout_toRightOf="@+id/avatar"
        android:paddingBottom="4dp"
        android:text="@string/unknownUser" />

    <TextView
        android:id="@+id/message_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_alignStart="@+id/name"
        android:layout_alignLeft="@+id/name"
        android:background="@drawable/message_bubble_not_my"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:text="@string/unknownMessage"
        android:textSize="18sp"
        android:visibility="visible" />
    <TextView
        android:id="@+id/message_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/message_body"
        android:layout_alignStart="@id/message_body"
        android:layout_alignLeft="@id/message_body"
        android:text="@string/unknownTime"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/message_seen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/message_body"
        android:layout_toEndOf="@+id/message_time"
        android:layout_toRightOf="@+id/message_time"
        android:text="@string/messageSeen"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp"
        tools:ignore="RtlSymmetry" />

</RelativeLayout>